See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.38.0

              Add pamfixtrunc.

              pambackground: recognize mid-row background.

              giftopnm: Add -repair option.

              libnetpbm: fix buffer overrun with PBM images < 8 columns.

              ppmdraw: fix crash with use of freed storage.  Thanks
              John Walker <kelvin@fourmilab.ch>.

              libnetpbm: fix crash with PAM read as PNM.

              libnetpbm: Embellish "bad magic number" error message.

              installnetpbm: use 2-argument open() for old Perl.
    
              configure: default to 'none' for Svgalib if it doesn't appear
              to be installed.

06.12.31 BJH  Release 10.37.0

              Add pambackground.  But doesn't find mid-row background yet.

              pnmcrop, pamtopnm: work on multi-image stream.
              Thanks Erik Auerswald <auerswal@unix-ag.uni-kl.de>.

              pnmshear: add -background.  Thanks Erik Auerswald
              <auerswal@unix-ag.uni-kl.de>.

              ppmtogif: replace with pamtogif.  Fix garbage output with
              -interlace.

              pbmtoxbm: add -name option.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pbmtoxbm: Use packed PBM functions for efficiency.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.
              
              xbmtopbm: Use packed PBM functions for efficiency.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              cmuwmtopbm, mgrtopbm, pbmtocmuwm, pbmtoicon, pbmtomgr:
              Use packed PBM functions for efficiency.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              libnetpbm: add pnm_colorname().

              libnetpbm: add pnm_computetuplefreqtable3().  Has ability
              to limit number of planes of input considered.
